# openalex-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: rtd-publish.yml  test.yml
docs/: mkdocs.yml
docs/docs/: api-reference.md  authentication.md  content-download.md  getting-started.md  index.md  migration.md  pagination.md  querying.md  semantic-search.md
src/openalexpy/: __init__.py  client.py  config.py  content.py  entities.py  exceptions.py  filters.py  pagination.py  query.py  response.py  util.py
tests/: conftest.py  test_client.py  test_content.py  test_entities.py  test_filters.py  test_query.py  test_response.py  test_util.py
